# ida-themr

./: README.md  ida-plugin.json  pyproject.toml  tests.py
.github/workflows/: python.yml
scripts/: patch3.patch  qtmapper2.py  theme_converter.py
src/: ida_themr.py  ida_themr_plugin.py  qinspector.py  qss_formatter.py  qt_shim.py  svg_icon_maker.py  var_expander.py
src/template/: dp702.qss  dp801.qss  fluentui_colors.json  theme.css
src/template/darcula/: theme.json
src/template/default/: theme.qss
src/template/dp701/: theme.qss
src/template/dp801/: theme.qss
tmp/Dracula/: theme.css
