[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ida-themr"
version = "0.1.0"
description = "IDA theme remapper"

[project.scripts]
ida-themr = "ida_themr:main"

[tool.test.run]
branch = true
include = ["tests/*"]
command_line = "-m unittest discover -s tests/"